# vibe-wellness

./: .gitignore  .python-version  LICENSE  Makefile  README.md  README_zh.md  install.py  install.sh  pyproject.toml
.github/workflows/: publish.yml
scripts/: gen_drink_water.py  gen_sedentary.py  hide.sh  show.sh
vibe_wellness/: cli.py  config.json  config.py  installer.py  show.py  ui.py  uninstall.py
